# gemini-mcp-client

./: .env.example  .gitignore  README.md  pyproject.toml
src/mcp_client/: __init__.py  client.py  config.py  main.py
